--- a/publichtml/help.html
+++ b/publichtml/help.html
@@ -10,10 +10,13 @@
 
 <body>
 
-<!--Tristan-->
+<img src="logo.png" alt="bbqsauce"/>
+
 <div class="Help">
 <h1> Help </h1>
-<!--picture of store-->
+
+<img src="open.jpg" alt="bbqsauce"/>
+
 <h2>Hours:</h2>
 
 <table>
@@ -27,6 +30,20 @@
 </tr> 
 Saturday-Sunday 9am-5pm
 </table>
+
+<h2>Business Phone:</h2>
+
+<p>662-770-8634</p>
+
+<img src="question.jpg" alt="bbqsauce"/>
+
+<h2>FAQ</h2>
+    <h3>Q:How good is your sauce?</h3>
+    <p>A:Good enough to hold a coversation with death.</p>
+    <h3>Q:Did Obama and Ramsey approve of your sauce?</h3>
+    <p>A:Why yes they did and we can garauntee that our sauce will send your taste buds to the other side.</p>
+    <h3>Do you cater your sauces?</h3>
+    <p>Why yes we do! You have a barbecue, but your sauce game is weak? Call up our store and we'll fix the problem.</p>
 
 <footer> Copyright 2020 Famous Graves &copy;</footer>
 
