--- a/publichtml/sauce_of_the_month.html
+++ b/publichtml/sauce_of_the_month.html
@@ -10,23 +10,20 @@
 
 <body>
 
-<!--Tristan-->
-<div class="Help">
-<h1> Help </h1>
-<!--picture of store-->
-<h2>Hours:</h2>
+<img src="logo.png" alt="bbqsauce"/>
 
-<table>
-<tr>
-<th>Days</th>
-<th>Hours</th>
-</tr>
-<tr>
-<td>Tuesday-Friday</td>
-<td> 8am-11pm</td>
-</tr> 
-Saturday-Sunday 9am-5pm
-</table>
+<div class="sauce_of_the_month">
+<h1> Sauce of the Month </h1>
+
+<img src="saucemonth.png" alt="bbqsauce"/>
+
+<h2>4th Horsemen</h2>
+
+<p>Do we have a treat for you with this month's special sauce. Deep within the pages of the sauce bible lies the key to death itself.
+    we often refer to death as a sweet release and so that's exactly what we did with this sauce. So we took what we knew about bbq sauce and gave
+it some love with sugar, apples, and honey. Although, if we kept this sweet we would've called it a kiss. So to stay true to it's name we gave it a bite.
+    With our special mix of secret peppers the sauce will make its name known, as the 4th horsemen.</p>
+
 
 <footer> Copyright 2020 Famous Graves &copy;</footer>
 
