--- a/publichtml/help.html
+++ b/publichtml/help.html
@@ -10,6 +10,30 @@
 
 <body>
 
+<header>
+    <nav>
+        <ul>
+            <li>
+                <a href="sauce_of_the_month.html">Sauce of the Month</a>
+            </li>
+
+            <li>
+                <a href="aboutus.html">About Us</a>
+            </li>
+
+            <li>
+                <a href="buyourproducts.html">Buy Our Products</a>
+            </li>
+            <li>
+                <a href="news.html">News</a>
+            </li>
+            <li>
+                <a href="index.html">Index</a>
+            </li>
+
+
+
+
 <img src="logo.png" alt="bbqsauce"/>
 
 <div class="Help">
