--- a/publichtml/help.html
+++ b/publichtml/help.html
@@ -30,9 +30,9 @@
             <li>
                 <a href="index.html">Index</a>
             </li>
-
-
-
+        </ul>
+    </nav>
+</header>
 
 <img src="logo.png" alt="bbqsauce"/>
 
