--- a/publichtml/aboutus.html
+++ b/publichtml/aboutus.html
@@ -9,6 +9,33 @@
 </head>
 
 <body>
+
+<header>
+    <nav>
+        <ul>
+            <li>
+                <a href="sauce_of_the_month.html">Sauce of the Month</a>
+            </li>
+
+            <li>
+                <a href="help.html">Help</a>
+            </li>
+
+            <li>
+                <a href="buyourproducts.html">Buy Our Products</a>
+            </li>
+            <li>
+                <a href="news.html">News</a>
+            </li>
+            <li>
+                <a href="index.html">Index</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+
+
+
 <div class="About Us">
 <h1> About Us </h1>
 
