--- a/publichtml/sauce_of_the_month.html
+++ b/publichtml/sauce_of_the_month.html
@@ -10,6 +10,31 @@
 
 <body>
 
+<header>
+    <nav>
+        <ul>
+            <li>
+                <a href="help.html">Help</a>
+            </li>
+
+            <li>
+                <a href="aboutus.html">About Us</a>
+            </li>
+
+            <li>
+                <a href="buyourproducts.html">Buy Our Products</a>
+            </li>
+            <li>
+                <a href="news.html">News</a>
+            </li>
+            <li>
+                <a href="index.html">Index</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+
+
 <img src="logo.png" alt="bbqsauce"/>
 
 <div class="sauce_of_the_month">
