--- a/publichtml/buyourproducts.html
+++ b/publichtml/buyourproducts.html
@@ -10,10 +10,7 @@
 </head>
 <body>
 	<header> 
-
-<h1>Famous Graves</h1>
-	<img src="logo.png"alt=chapter01/>
-
+		
 <!-- Navigation Here-->
 		<nav>
 			<ul>
@@ -23,8 +20,25 @@
 
 				<li> <a href="news.html">News</a>
 				</li>
+
+				<li>
+					<a href="aboutus.html">About Us</a>
+				</li>
+
+				<li>
+					<a href="help.html">Help</a>
+				</li>
+
+				<li>
+					<a href="sauce_of_the_month.html">Sauce of the Month</a>
+				</li>
+
 			</ul>
 		</nav>
+
+<h1>Famous Graves</h1>
+	<img src="logo.png"alt=chapter01/>
+
 </header>
 
 
