--- a/publichtml/index.html
+++ b/publichtml/index.html
@@ -18,7 +18,20 @@
 				</li>
 
 				<li> <a href="news.html">News</a>
+				</li> 
+
+				<li>
+					<a href="aboutus.html">About Us</a>
 				</li>
+
+				<li>
+					<a href="help.html">Help</a>
+				</li>
+
+				<li>
+					<a href="sauce_of_the_month.html">Sauce of the Month</a>
+				</li>
+
 			</ul>
 		</nav>
 </header>
