--- a/publichtml/aboutus.html
+++ b/publichtml/aboutus.html
@@ -42,7 +42,7 @@
 <img src="logo.png" alt="bbqsauce"/>
 
 
-<h2>Who Are We?</h2>
+<h2>Who We Are</h2>
 
 <p>We are two up and coming entrepreneurs from the west side of the Mississippi trying to get by with our savory sauce.
     Skylar is the main woman in charge of the many sacred formulas. She enjoys long walks on the farm, eating bush's baked
