--- a/publichtml/aboutus.html
+++ b/publichtml/aboutus.html
@@ -55,7 +55,7 @@
 <h2>What We Stand For</h2>
 <p>Here at Famous Graves we want to ensure excellence in the sauce we take great pride in.
     In the words of the sauce bible: He who hath no sauce cannot be lost for mankind must have the sauce in order to be lost.
-    We live to create masterpieces and will go above and beyond to serve your taste buds and have you coming back for more!</p>
+    We live to change the sauce game and will go above and beyond to serve your taste buds while having you come back for more!</p>
 <img src="store.jpg" alt="bbqsauce"/>
 
 <footer> Copyright 2020 Famous Graves &copy;</footer>
