--- a/publichtml/index.html
+++ b/publichtml/index.html
@@ -60,7 +60,7 @@
 
 		<p>Here at Famous Graves, we take great pride in our sauce. Our customers are the most important part of our business and we couldn't do it without you. We aim to serve people from all across the country. Our Barbaque Sauce will make your tastebuds melt. Like we say, our sauce is so amazing, you'll go six feet under.</p>
 
-	<h2>Customer of the Week</h2>
+	<h2>The Customer of the Week</h2>
 		<h3>Famous Graves wouldn't be anywhere without you!</h3>
 			<p>Introducing Our Customer of the Week, Barack Obama.</p>
 				<img src="barack.png" alt=chapter01/>
