--- a/publichtml/buyourproducts.html
+++ b/publichtml/buyourproducts.html
@@ -1,41 +1,54 @@
-<!--Skylar--> 
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
 
 	<meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="bbq_text.css">
 
-	<title>Buy Our Products</title>
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 
-	<header> 
-		
-<!-- Navigation Here-->
-		<nav>
-			<ul>
-				<li>
-					<a href="index.html">Home Page</a>
-				</li>
 
-				<li> <a href="news.html">News</a>
-				</li>
+  <p>Famous Graves Offers Divinity In Every Taste</p>            
+  <table class="table">
+    <thead>
+      <tr>
+        <th>EXPLORE</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <nav>
+            <ul>
+                <li>
+        <td> <a href="sauce_of_the_month.html"> Sauce of the Month</a></td>
+    </li>
+      </tr>
+      <tr>
+        <li>
+        <td><a href="help.html">Help</a></td>
+    </li>
+     <td> <a href="aboutus.html"> About Us</a> </td>
+ </li?>
+ <li>
+      <td>  <a href="news.html">News</a> </td>
+            </li>
+            <li>
+                 <td>   <a href="index.html">Index</a> </td>
+            </li>
 
-				<li>
-					<a href="aboutus.html">About Us</a>
-				</li>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-				<li>
-					<a href="help.html">Help</a>
-				</li>
-
-				<li>
-					<a href="sauce_of_the_month.html">Sauce of the Month</a>
-				</li>
-
-			</ul>
-		</nav>
 
 <h1>Famous Graves</h1>
 	<img src="logo.png"alt=chapter01/>
