--- a/publichtml/sauce_of_the_month.html
+++ b/publichtml/sauce_of_the_month.html
@@ -1,39 +1,49 @@
-<!--Tristan-->
 <!DOCTYPE html>
 <html lang="en">
 
 <head> 
 <meta charset="utf-8">
-<title>Famous Graves</title>
-
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
-
 <body>
 
-<header>
-    <nav>
-        <ul>
+
+  <p>Famous Graves Offers Divinity In Every Taste</p>            
+  <table class="table">
+    <thead>
+      <tr>
+        <th>EXPLORE</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <nav>
+            <ul>
+                <li>
+        <td> <a href="aboutus.html"> About Us</a></td>
+    </li>
+      </tr>
+      <tr>
+        <li>
+        <td><a href="help.html">Help</a></td>
+    </li>
+     <td> <a href="buyourproducts.html">Buy Our Products</a> </td>
+ </li?>
+ <li>
+      <td>  <a href="news.html">News</a> </td>
+            </li>
             <li>
-                <a href="help.html">Help</a>
+                 <td>   <a href="index.html">Index</a> </td>
             </li>
 
-            <li>
-                <a href="aboutus.html">About Us</a>
-            </li>
-
-            <li>
-                <a href="buyourproducts.html">Buy Our Products</a>
-            </li>
-            <li>
-                <a href="news.html">News</a>
-            </li>
-            <li>
-                <a href="index.html">Index</a>
-            </li>
-        </ul>
-    </nav>
-</header>
-
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 <img src="logo.png" alt="bbqsauce"/>
 
@@ -44,10 +54,10 @@
 
 <h2>4th Horsemen</h2>
 
-<p>Do we have a treat for you with this month's special sauce. Deep within the pages of the sauce bible lies the key to death itself.
+<em><p>Do we have a treat for you with this month's special sauce. Deep within the pages of the sauce bible lies the key to death itself.
     we often refer to death as a sweet release and so that's exactly what we did with this sauce. So we took what we knew about bbq sauce and gave
 it some love with sugar, apples, and honey. Although, if we kept this sweet we would've called it a kiss. So to stay true to it's name we gave it a bite.
-    With our special mix of secret peppers the sauce will make its name known, as the 4th horsemen.</p>
+    With our special mix of secret peppers the sauce will make its name known, as the 4th horsemen.</p></em>
 
 
 <footer> Copyright 2020 Famous Graves &copy;</footer>
