--- a/publichtml/aboutus.html
+++ b/publichtml/aboutus.html
@@ -1,46 +1,57 @@
-<!--Tristan-->
-<!DOCTYPE html>
+ <!-- Thomas A. Snyder-->  
+ <!DOCTYPE html>
 <html lang="en">
-
-<head> 
 <meta charset="utf-8">
-<title>Famous Graves</title>
-
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
-
 <body>
 
-<header>
-    <nav>
-        <ul>
-            <li>
-                <a href="sauce_of_the_month.html">Sauce of the Month</a>
-            </li>
 
-            <li>
-                <a href="help.html">Help</a>
-            </li>
+  <em><p>Famous Graves Offers Divinity In Every Taste</p></em>   
+         <ul class="nav navbar-nav">
+      <li class="active"><a href="aboutus.html">About Us</a></li>
+      <li><a href="help.html">Help</a></li>
+      <li><a href="buyourproducts.html">Buy Our Products</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="index.html"> Index </a></li>
+    </ul>         
+  <table class="table">
+    <thead>
+      <tr>
+        <i><th>New Deals!</th></i>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <nav>
+            <ul>
+                <li>
+        <td> <a href="sauce_of_the_month.html"> Sauce of the Month</a></td>
+    </li>
+      </tr>
 
-            <li>
-                <a href="buyourproducts.html">Buy Our Products</a>
-            </li>
-            <li>
-                <a href="news.html">News</a>
-            </li>
-            <li>
-                <a href="index.html">Index</a>
-            </li>
-        </ul>
-    </nav>
-</header>
+    </tbody>
+  </table>
+</div>
+
+</body>
+</html>
+
+
+<link rel="stylesheet" type="text/css" href="bbq_text.css">
 
 
 <div class="About Us">
+    <section>
+        
 <h1> About Us </h1>
 
 <img src="logo.png" alt="bbqsauce"/>
-
-
+<article>
 <h2>Who We Are</h2>
 
 <p>We are two up and coming entrepreneurs from the west side of the Mississippi trying to get by with our savory sauce.
@@ -48,13 +59,15 @@
     beans straight from the can, and spending time with her family. Tristan is the man with the plan giving our amazing sauce its business.
     He loves to smoke meats, spend time with his kids, and fish. Tristan and Skylar met in college and after a crazy bout with barbecue sauce the two decided to open a business
     right in their hometown, Batesville, MS. From there the two colleagues built a franchise worth dying for.</p>
-
+</article>
 <img src="us.jpg" alt="bbqsauce"/>
-
-<h2>What We Stand For</h2>
+<article>
+<b><h2>What We Stand For</h2></b>
 <p>Here at Famous Graves we want to ensure excellence in the sauce we take great pride in.
     In the words of the sauce bible: He who hath no sauce cannot be lost for mankind must have the sauce in order to be lost.
     We live to change the sauce game and will go above and beyond to serve your taste buds while having you come back for more!</p>
+</article>
+</section>
 <img src="store.jpg" alt="bbqsauce"/>
 
 <footer> Copyright 2020 Famous Graves &copy;</footer>
@@ -64,3 +77,4 @@
 
 </html>
 
+ 
