--- a/publichtml/help.html
+++ b/publichtml/help.html
@@ -1,10 +1,55 @@
-<!--Tristan-->
 <!DOCTYPE html>
 <html lang="en">
 
 <head> 
 <meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="bbq_text.css">
+
 <title>Famous Graves</title>
+<link rel="stylesheet" type="text/css" href="bbq_text.css">
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+
+  <p>Famous Graves Offers Divinity In Every Taste</p>            
+  <table class="table">
+    <thead>
+      <tr>
+        <th>EXPLORE</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <nav>
+            <ul>
+                <li>
+        <td> <a href="sauce_of_the_month.html"> Sauce of the Month</a></td>
+    </li>
+      </tr>
+      <tr>
+        <li>
+        <td><a href="help.html">Help</a></td>
+    </li>
+     <td> <a href="buyourproducts.html">Buy Our Products</a> </td>
+ </li?>
+ <li>
+      <td>  <a href="news.html">News</a> </td>
+            </li>
+            <li>
+                 <td>   <a href="index.html">Index</a> </td>
+            </li>
+
+      </tr>
+    </tbody>
+  </table>
+</div>
+
 
 </head>
 
